--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -14,6 +14,8 @@
         {% block userlinks %}
             <!-- Back to site link -->
             <a href="{% url 'home' %}">{% translate 'View site' %}</a> /
+            <!-- Company Settings link -->
+            <a href="{% url 'accounts:company_info' %}">إعدادات الشركة</a> /
             {% if user.is_active and user.is_staff %}
                 {% url 'django-admindocs-docroot' as docsroot %}
                 {% if docsroot %}
