--- a/inventory/templates/inventory/dashboard.html
+++ b/inventory/templates/inventory/dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}لوحة تحكم المخزون{% endblock %}
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <h2 class="my-4">لوحة تحكم المخزون</h2>
     
     <!-- Quick Actions -->
