--- a/odoo_db_manager/templates/odoo_db_manager/dashboard.html
+++ b/odoo_db_manager/templates/odoo_db_manager/dashboard.html
@@ -51,7 +51,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="odoo-dashboard">
+<div class="container-fluid">
+    <div class="odoo-dashboard">
     <!-- شريط الأدوات العلوي -->
     <div class="odoo-toolbar">
         <div class="odoo-toolbar-left">
@@ -626,4 +627,6 @@
         });
     }
 </script>
+    </div>
+</div>
 {% endblock %}
