--- a/customers/templates/customers/customer_list.html
+++ b/customers/templates/customers/customer_list.html
@@ -3,7 +3,7 @@
 {% block title %}قائمة العملاء - نظام الخواجه{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <div class="row mb-4">
         <div class="col-md-8">
             <h2 class="mb-3">قائمة العملاء</h2>
