--- a/inspections/templates/inspections/inspection_list.html
+++ b/inspections/templates/inspections/inspection_list.html
@@ -6,7 +6,7 @@
 {% block title %}{% trans 'المعاينات' %}{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container-fluid mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>{% trans 'المعاينات' %}</h2>
         <div class="d-flex gap-2">
