--- a/inventory/templates/inventory/product_list.html
+++ b/inventory/templates/inventory/product_list.html
@@ -2,7 +2,7 @@
 {% block title %}قائمة المنتجات{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>قائمة المنتجات</h1>
         <div class="btn-group">
