--- a/manufacturing/templates/manufacturing/manufacturingorder_list.html
+++ b/manufacturing/templates/manufacturing/manufacturingorder_list.html
@@ -401,7 +401,7 @@
 
 {% block content %}
 {% csrf_token %}
-<div class="container">
+<div class="container-fluid">
     <!-- البطاقات الإحصائية -->
     <div class="row mb-4">
         <div class="col-md-3">
