--- a/orders/templates/orders/dashboard.html
+++ b/orders/templates/orders/dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}لوحة تحكم الطلبات{% endblock %}
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <h2 class="my-4">لوحة تحكم الطلبات</h2>
     <div class="row mb-4">
         <div class="col-md-4">
