--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -59,7 +59,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2><i class="fas fa-shopping-cart"></i> الطلبات</h2>
         <a href="{% url 'orders:order_create' %}" class="btn btn-primary">
