--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
+<div class="container-fluid">
 <div class="row">
     <div class="col-md-8 mx-auto">
         <div class="card">
@@ -83,5 +84,6 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
